# testrepo

test-proj/: .env.example  pyproject.toml
test-proj/config/: api.py  settings.py  urls.py
test-proj/core/: apps.py
test-proj/dashboard/: views.py
test-proj/dashboard/templates/: profile.html
